# SOLECourse

./: CMakeLists.txt  main.cpp
Chebyshev/: Chebyshev.h
Dense/: BackSubstitution.h  DenseMatrix.h  GaussMethod.h  HeadGaussMethod.h  Householder.h  LU.h  ThomasAlgorithm.h
GMRES/: GMRES.h
Generators/: RandMatrixGenerator.h  RandTridiagonalMatrixGen.h
Givens/: Rotations.h
Krylov/: Krylov.h
PlotData/: headGaussNormPlotData.txt  pureGaussNormPlotData.txt
PlotData/MultiplyTime/: CSR.txt  CSR20percent.txt  Dense.txt  Dense20percent.txt
PlotData/SimpleIteration/: SimpleIteration_Speed0.175000.txt  SimpleIteration_Speed0.180000.txt  SimpleIteration_Speed0.181800.txt  SimpleIteration_Speed0.183000.txt  SimpleIteration_Speed0.188000.txt
Sparse/: BiCG.h  BiCGstab.h  CG.h  CSR.h  Gauss-Seidel.h  GradientDescent.h  SOR.h  SSOR.h  SimpleIteration.h  Yacobi.h
Tests/: Tests.h
utility/: Consts.h  Overloads.h  Triplet.h  gnuplot-iostream.h
